# kawapack

./: pyproject.toml
kawapack/_src/: __init__.py  unpack.py
kawapack/_src/lz4ak/: Block.py  __init__.py
