[tool.poetry]
name = "kawapack"
version = "0.15.3"
description = "Utility for extracting Arknights assets"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
UnityPy = "^1.22.1"
Pillow = "^10.1.0"
pycryptodome = "^3.19.0"
pymongo = "^4.5.0"
fsb5 = "^1.0"
wannacri = { git = "https://github.com/akgcc/WannaCRI" }
#wannacri deps:
ffmpeg-python = "^0.2.0"
python-json-logger = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
